--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <title>Weather Checker</title>
+</head>
+
+<body>
+  <nav class="navbar bg-body-tertiary bg-primary">
+    <h1 class="justify-content-center text-white container-fluid">Weather Dashboard</h1>
+  </nav>
+
+  <main class="row justify-space-between">
+    <section class="col-12 col-md-4">
+      <div class="card">
+        <h3 class="card-header text-uppercase">Search by City</h3>
+        <form id="user-form" class="card-body">
+          <label class="form-label" for="username"></label>
+          <input name="username" id="username" type="text" autofocus="true" class="form-input" placeholder="Ex. Chicago, US"/>
+          <button class="btn border-solid">Get data!</button>
+        </form>
+      </div>
+      
+      <div class="card">
+        <h3 class="card-header text-uppercase">Your History</h3>
+        <ul id="history"></ul>
+      </div>
+    </section>
+
+    <section class="col-12 col-md-8">
+      <div id="today" class="card">
+          <h4 class="date"></h4>
+          <i class="condition"></i>
+          <p class="temp"></p>
+          <p class="wind"></p>
+          <p class="humid"></p>
+        </div>
+      </div>
+
+      <div class="p-3">
+        <h1>5 Day Forecast</h1>
+      </div>
+
+      <section class="row">
+        <div id="1" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+          <div class="card-body">
+            <h4 class="date"></h4>
+            <i class="condition"></i>
+            <p class="temp"></p>
+            <p class="wind"></p>
+            <p class="humid"></p>
+          </div>
+        </div>
+
+        <div id="2" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+          <div class="card-body">
+            <h4 class="date"></h4>
+            <i class="condition"></i>
+            <p class="temp"></p>
+            <p class="wind"></p>
+            <p class="humid"></p>
+          </div>
+        </div>
+
+        <div id="3" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+          <div class="card-body">
+            <h4 class="date"></h4>
+            <i class="condition"></i>
+            <p class="temp"></p>
+            <p class="wind"></p>
+            <p class="humid"></p>
+          </div>
+        </div>
+
+        <div id="4" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+          <div class="card-body">
+            <h4 class="date"></h4>
+            <i class="condition"></i>
+            <p class="temp"></p>
+            <p class="wind"></p>
+            <p class="humid"></p>
+          </div>
+        </div>
+
+        <div id="5" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+          <div class="card-body">
+            <h4 class="date"></h4>
+            <i class="condition"></i>
+            <p class="temp"></p>
+            <p class="wind"></p>
+            <p class="humid"></p>
+          </div>
+        </div>
+      </section>
+    </section>
+  </main>
+  <script
+  src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+  integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+  crossorigin="anonymous"
+  ></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="assets/script.js"></script>
+</body>
+
+</html>
