further updates to java

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>5 Day Forecast</h1>
       </div>
 
-      <section class="row">
+      <div class="row">
         <div id="1" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
           <div class="card-body">
             <h4 class="date"></h4>
