--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/style.css">
   <title>Weather Checker</title>
 </head>
 
@@ -32,9 +31,9 @@
     </section>
 
     <section class="col-12 col-md-8">
-      <div id="today" class="card">
+      <div id="today" class="card p-3">
           <h4 class="date"></h4>
-          <i class="condition"></i>
+          <span class="condition"></span>
           <p class="temp"></p>
           <p class="wind"></p>
           <p class="humid"></p>
@@ -46,50 +45,50 @@
       </div>
 
       <div class="row">
-        <div id="1" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+        <div id="1" class="5dayFork card text-black col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
           <div class="card-body">
             <h4 class="date"></h4>
-            <i class="condition"></i>
+            <span class="condition"></span>
             <p class="temp"></p>
             <p class="wind"></p>
             <p class="humid"></p>
           </div>
         </div>
 
-        <div id="2" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+        <div id="2" class="5dayFork card text-black col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
           <div class="card-body">
             <h4 class="date"></h4>
-            <i class="condition"></i>
+            <span class="condition"></span>
             <p class="temp"></p>
             <p class="wind"></p>
             <p class="humid"></p>
           </div>
         </div>
 
-        <div id="3" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+        <div id="3" class="5dayFork card text-black col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
           <div class="card-body">
             <h4 class="date"></h4>
-            <i class="condition"></i>
+            <span class="condition"></span>
             <p class="temp"></p>
             <p class="wind"></p>
             <p class="humid"></p>
           </div>
         </div>
 
-        <div id="4" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+        <div id="4" class="5dayFork card text-black col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
           <div class="card-body">
             <h4 class="date"></h4>
-            <i class="condition"></i>
+            <span class="condition"></span>
             <p class="temp"></p>
             <p class="wind"></p>
             <p class="humid"></p>
           </div>
         </div>
 
-        <div id="5" class="5dayFork card text-white bg-warning col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
+        <div id="5" class="5dayFork card text-black col-12 col-md-6 col-lg-2 my-2 mx-1" style="max-width: 18rem;">
           <div class="card-body">
             <h4 class="date"></h4>
-            <i class="condition"></i>
+            <span class="condition"></span>
             <p class="temp"></p>
             <p class="wind"></p>
             <p class="humid"></p>
